--- a/GrupoEmpresarial-war/web/interfaz/permiso/componente/cpt-formulario-permiso.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/permiso/componente/cpt-formulario-permiso.xhtml
@@ -21,7 +21,7 @@
                     <p:outputLabel for="txtPermiso" value="Permiso:" styleClass="etiquetaFormulario"/>
                 </div>
                 <div class="ui-grid-col-9">
-                    <p:inputText id="txtPermiso" value="#{MbAdministrarPermiso.permisoSeleccionado.permiso}"  required="true" style="width: 90%;"/>        
+                    <p:inputText id="txtPermiso" value="#{MbAdministrarPermiso.permisoSeleccionado.permiso}"  required="true" style="width: 90%;"/>
                 </div>
             </div>
             <div class="ui-grid-row">
@@ -29,24 +29,23 @@
                     <p:outputLabel for="txtDescipcion" value="Descipción:" styleClass="etiquetaFormulario"/>
                 </div>
                 <div class="ui-grid-col-9">
-                    <p:inputText id="txtDescipcion" value="#{MbAdministrarPermiso.permisoSeleccionado.descripcion}"  required="true" style="width: 90%;"/>        
+                    <p:inputText id="txtDescipcion" value="#{MbAdministrarPermiso.permisoSeleccionado.descripcion}"  required="true" style="width: 90%;"/>
                 </div>
             </div>
-            
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
                     <p:outputLabel for="txtUrl" value="Url:" styleClass="etiquetaFormulario"/>
                 </div>
                 <div class="ui-grid-col-9">
-                    <p:inputText id="txtUrl" value="#{MbAdministrarPermiso.permisoSeleccionado.url}"  required="false" style="width: 90%;"/>        
+                    <p:inputText id="txtUrl" value="#{MbAdministrarPermiso.permisoSeleccionado.url}"  required="false" style="width: 90%;"/>
                 </div>
-            </div>              
+            </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
                     <p:outputLabel for="txtComando" value="Comando:" styleClass="etiquetaFormulario"/>
                 </div>
                 <div class="ui-grid-col-9">
-                    <p:inputText id="txtComando" value="#{MbAdministrarPermiso.permisoSeleccionado.comando}"  required="false" style="width: 90%;"/>        
+                    <p:inputText id="txtComando" value="#{MbAdministrarPermiso.permisoSeleccionado.comando}"  required="false" style="width: 90%;"/>
                 </div>
             </div>  
             <div class="ui-grid-row">
@@ -54,7 +53,7 @@
                     <p:outputLabel for="txtActualizar" value="Actualizar:" styleClass="etiquetaFormulario"/>
                 </div>
                 <div class="ui-grid-col-9">
-                    <p:inputText id="txtActualizar" value="#{MbAdministrarPermiso.permisoSeleccionado.actualizar}" required="false" style="width: 90%;"/>        
+                    <p:inputText id="txtActualizar" value="#{MbAdministrarPermiso.permisoSeleccionado.actualizar}" required="false" style="width: 90%;"/>
                 </div>
             </div>  
             <div class="ui-grid-row">
@@ -62,9 +61,17 @@
                     <p:outputLabel for="txtAjax" value="Ajax:" styleClass="etiquetaFormulario"/>
                 </div>
                 <div class="ui-grid-col-9">
-                    <p:inputText id="txtAjax" value="#{MbAdministrarPermiso.permisoSeleccionado.ajax}" required="false" style="width: 90%;"/>        
+                    <p:inputText id="txtAjax" value="#{MbAdministrarPermiso.permisoSeleccionado.ajax}" required="false" style="width: 90%;"/>
                 </div>
-            </div>              
+            </div>
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-3">
+                    <p:outputLabel for="swtVisible" value="Visible:" styleClass="etiquetaFormulario"/>
+                </div>
+                <div class="ui-grid-col-9">
+                    <p:inputSwitch id="swtVisible" value="#{MbAdministrarPermiso.permisoSeleccionado.visible}" />
+                </div>
+            </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
                    <p:outputLabel value="" styleClass="etiquetaFormulario"/>
